--- a/pom.xml
+++ b/pom.xml
@@ -4,20 +4,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.yoyling</groupId>
+    <groupId>com.william</groupId>
     <artifactId>MyBlog-SSM</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
-
-    <name>blog-ssm Maven Webapp</name>
-    <!-- FIXME change it to the project's website -->
-    <url>http://www.example.com</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-
         <spring.version>5.0.2.RELEASE</spring.version>
         <mybatis.version>3.4.5</mybatis.version>
         <mybatis-spring.version>1.3.0</mybatis-spring.version>
@@ -37,11 +32,9 @@
         <useragentutils.version>1.21</useragentutils.version>
         <shiro.version>1.4.0</shiro.version>
         <mail.version>1.4.7</mail.version>
-
     </properties>
 
     <dependencies>
-
         <!-- spring -->
         <dependency>
             <groupId>org.aspectj</groupId>
@@ -220,53 +213,16 @@
             <artifactId>UserAgentUtils</artifactId>
             <version>${useragentutils.version}</version>
         </dependency>
+
+        <!--Lombok-->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.10</version>
         </dependency>
-
-
-
     </dependencies>
-
+<!--    Maven资源过滤设置-->
     <build>
-        <finalName>MyBlog-SSM</finalName>
-        <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
-            <plugins>
-                <plugin>
-                    <artifactId>maven-clean-plugin</artifactId>
-                    <version>3.1.0</version>
-                </plugin>
-                <!-- see http://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_war_packaging -->
-                <plugin>
-                    <artifactId>maven-resources-plugin</artifactId>
-                    <version>3.0.2</version>
-                </plugin>
-                <plugin>
-                    <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.8.0</version>
-                </plugin>
-                <plugin>
-                    <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.22.1</version>
-                </plugin>
-                <plugin>
-                    <artifactId>maven-war-plugin</artifactId>
-                    <version>3.2.2</version>
-                </plugin>
-                <plugin>
-                    <artifactId>maven-install-plugin</artifactId>
-                    <version>2.5.2</version>
-                </plugin>
-                <plugin>
-                    <artifactId>maven-deploy-plugin</artifactId>
-                    <version>2.8.2</version>
-                </plugin>
-            </plugins>
-        </pluginManagement>
-
-
         <resources>
             <resource>
                 <directory>${basedir}/src/main/webapp</directory>
@@ -276,13 +232,7 @@
             </resource>
             <resource>
                 <directory>${basedir}/src/main/java</directory>
-                <includes>
-                    <include>**/*.xml</include>
-                    <include>**/*.properties</include>
-                </includes>
             </resource>
         </resources>
-
     </build>
-
 </project>
